--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+body {
+    margin: 0;
+}
+
 .div1 {
     display: flex;
     justify-content: flex-end;
+    margin: 8px;
 }
 
 .div2 {
@@ -12,6 +17,13 @@
     justify-content: center;
 }
 
+.div4 {
+    width: 100%;
+    height: 70px;
+    background-color: lightgrey;
+    position: fixed;
+    bottom: 0;
+}
 .googleimg {
     margin: 0 auto;
     display: block;
@@ -19,11 +31,20 @@
 }
 button {
     margin: 20px;
+    border: none;
+    border: solid;
+    border-color: rgb(239, 239, 239);
+    border-radius: 3px;
+    padding: 10px 15px;
+    outline: none;
+}
+button:hover {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 .search {
     margin: 0 auto;
     display: block;
-    font-size: 20px;
+    font-size: 17px;
     border: none;
     border: solid 1px;
     border-radius: 40px;
@@ -49,7 +70,7 @@ button {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-p, svg, img {
+.div1 .header1, svg, img {
     margin: 3px 0 0 0;
 }
 
