--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .div1 {
     display: flex;
     justify-content: flex-end;
@@ -9,7 +18,7 @@ body {
 }
 
 .div2 {
-    margin-top: 20vh;
+    margin-top: 15vh;
 }
 
 .div3 {
@@ -19,15 +28,29 @@ body {
 
 .div4 {
     width: 100%;
-    height: 70px;
-    background-color: lightgrey;
+    height: 40px;
+    background-color: rgb(238, 238, 238);
     position: fixed;
     bottom: 0;
+}
+
+.div4 a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    margin: 0 15px 0 15px;
+    padding-top: 13px;
+    color: gray;
 }
 .googleimg {
     margin: 0 auto;
     display: block;
     margin-bottom: 30px;
+}
+.foo1 {
+    float: left;
+}
+.foo2 {
+    float: right;
 }
 button {
     margin: 20px;
@@ -37,6 +60,7 @@ button {
     border-radius: 3px;
     padding: 10px 15px;
     outline: none;
+    color: rgb(93, 93, 93);
 }
 button:hover {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
@@ -61,13 +85,15 @@ button:hover {
 .buttons {
     max-width: 25px;
     padding-left: 10px;
+    color: grey;
 }
 
 .header1 {
     padding: 10px;
-    font-size: 13px;
+    font-size: 14px;
     padding-right: 5px;
     font-family: Arial, Helvetica, sans-serif;
+    color: rgb(90, 90, 90);
 }
 
 .div1 .header1, svg, img {
